# skill_core

./: README.md  __init__.py  loader.py  pyproject.toml  registry.py  security.py
adapters/: __init__.py  mysql_repo.py
src/skill_core/: ports.py  types.py
src/skill_core/adapters/: mysql_repo.py
src/skill_core/skills/research/research-report/: SKILL.md
src/skill_core/skills/research/research-report/templates/: report-outline.md
