[project]
name = "skill-core"
version = "0.1.0"
description = "Skill 技能系统核心包（runtime/ORM 无关，多后端复用）"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_core"]
